--- a/style.css
+++ b/style.css
@@ -22,12 +22,16 @@ body {
     font-weight: 600;
 }
 
+.semi-bold {
+    font-weight: 400;
+}
+
 .white {
     color: rgba(255, 255, 255, 0.9);
 }
 
-.dark-grey {
-    color: rgb(43, 43, 43);
+.grey {
+    color: rgb(98, 98, 98);
 }
 
 .fontXL {
@@ -46,6 +50,10 @@ body {
     font-size: .9rem;
 }
 
+.fontXs {
+    font-size: .85rem;
+}
+
 .blue-bg {
     background-color: #1992D4;
 }
@@ -53,6 +61,16 @@ body {
 .grey-bg {
     background-color: rgb(232, 234, 240);
 
+}
+
+.white-bg {
+    background-color: #fff;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, .1);
+}
+
+.rounded-bg {
+    border-radius: 8px;
+    padding: 1.5rem;
 }
 
 .grid {
@@ -86,8 +104,6 @@ body {
     align-items: center;
     z-index: 1;
     grid-area: head;
-    background-color: #fff;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, .2);
     padding: 25px 2.5rem 15px;
     gap: 25px;
 }
@@ -96,7 +112,7 @@ body {
     grid-area: main;
     grid-template-columns: 3fr 1fr;
     padding: 1.5rem 1rem;
-    gap: 5px;
+    gap: 25px;
 }
 
 #sidebar li {
@@ -155,4 +171,27 @@ button {
     height: 2.5rem;
     border: none;
     border-radius: 2rem;
+}
+
+#main h2 {
+    margin-bottom: 1rem;
+}
+
+#announcements {
+    margin-bottom: 2.5rem;
+}
+
+#announcements li {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid rgb(98, 98, 98);
+    margin: 1rem;
+}
+
+#announcements li:last-child {
+    border: none;
+    padding-bottom: 0;
+}
+
+#trending {
+    gap: 1.5rem;
 }
