--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
@@ -82,6 +86,7 @@ body {
     grid-template-areas:
         "side head"
         "side main"
+        "credit credit"
     ;
     height: 100vh;
 }
@@ -212,4 +217,19 @@ button {
     align-self: end;
     justify-self: end;
     word-spacing: 1.2rem;
+}
+
+#credit {
+    grid-area: credit;
+    background-color: #494949;
+    color: #dddddd;
+    text-align: center;
+    padding: .5rem;
+}
+
+#credit
+    a,
+    a:visited {
+    color: #fff;
+    font-weight: 400;
 }
